# lightning-detective

./: Cargo.toml  Dockerfile  README.md  compose.yaml
cli/: Cargo.toml
cli/src/: main.rs
detective/: Cargo.toml
detective/src/: alias_resolver.rs  ark.rs  bip353.rs  bolt12.rs  bolt12_invoice_details.rs  cashu.rs  chain_hash.rs  decoder.rs  duration.rs  features.rs  investigate_value.rs  invoice_details.rs  lib.rs  liquid_address.rs  lnurl.rs  offer_details.rs  onchain_address.rs  recipient.rs  rgs_graph.rs  spark.rs  types.rs
detective/src/ldk_node/: mod.rs  node.rs  offers_handler.rs
invoice-detective/: Cargo.toml
invoice-detective/src/: chain_hash.rs  decoder.rs
sample/: bip-353.csv  bip-353.txt  lightning-address.txt  lnurl.txt  test-vector-invoices.txt
server/: Cargo.toml
server/src/: main.rs  templates.rs
server/static/: app.js  styles.css
server/templates/: ark-address.html  bip21.html  bip353-or-lightning-address.html  bip353.html  bolt12-invoice.html  bolt12-static-invoice.html  cashu-payment-request.html  doc.html  error.html  index.html  invoice.html  lightning-address.html  liquid-uri.html  liquid_address.html  liquid_uri.html  lnurl-request-invoice-event.html  lnurl-request-invoice.html  lnurl.html  offer-request-invoice-event.html  offer-request-invoice.html  offer.html  onchain_address.html  request-invoice-stream.html  routing_hints.html  silent-payment-address.html  silent_payment_address.html
server/templates/include/: bip21-table.html  bip353-details.html  lightning-address-details.html  lnurl-details.html  result-header.html  routing-hints.html
server2/: Cargo.toml
server2/src/: index.html  main.rs  templates.rs
server2/templates/: error.html  features.html  index.html  invoice.html  offer.html  routing_hints.html
templates/: base.html.tera  invoice.html.tera
