[package]
name = "detective"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bitcoin = { version = "0.32.2", default-features = false, features = ["std", "rand-std"] }
bitcoin-payment-instructions = { git = "https://github.com/rust-bitcoin/bitcoin-payment-instructions.git", rev = "0324f6d" }
chrono = "0.4.38"
iso_currency = "0.5.1"
lightning = { version = "0.2.0", default-features = false, features = ["std"] }
lightning-invoice = { version = "0.34.0", features = ["std"] }
lnurl-rs = { git = "https://github.com/benthecarman/lnurl-rs.git", rev = "745aea8", default-features = false }
percent-encoding-rfc3986 = "0.1.3"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thousands = "0.2.0"
tokio = "1.48.0"
tokio-stream = "0.1.15"
bech32 = "0.11.0"
base64 = "0.21.7"
silentpayments = { version = "0.4.1", default-features = false }
