[package]
name = "detective"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bitcoin = { version = "0.32", default-features = false, features = ["std", "rand-std"] }
bitcoin-payment-instructions = { git = "https://github.com/rust-bitcoin/bitcoin-payment-instructions.git", rev = "0324f6d" }
chrono = "0.4"
iso_currency = "0.5"
lightning = { version = "0.2", default-features = false, features = ["std"] }
lightning-invoice = { version = "0.34", features = ["std"] }
lnurl-rs = { git = "https://github.com/benthecarman/lnurl-rs.git", rev = "745aea8", default-features = false }
percent-encoding-rfc3986 = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thousands = "0.2"
tokio = "1.48"
tokio-stream = "0.1"
bech32 = "0.11"
base64 = "0.22"
silentpayments = { version = "0.4", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
