[package]
name = "detective"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
bech32 = "0.11"
bitcoin = { version = "0.32", default-features = false, features = ["std", "rand-std"] }
bitcoin-payment-instructions = "0.6"
chrono = "0.4"
elements = "0.25"
iso_currency = "0.5"
lightning = { version = "0.2", default-features = false, features = ["std"] }
lightning-invoice = { version = "0.34", features = ["std"] }
lightning-net-tokio = "0.2"
lightning-rapid-gossip-sync = "0.2"
lnurl-rs = { git = "https://github.com/benthecarman/lnurl-rs.git", rev = "745aea8", default-features = false }
log = "0.4"
percent-encoding-rfc3986 = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
silentpayments = { version = "0.4", default-features = false }
thousands = "0.2"
tokio = { version = "1.48", features = ["macros", "net", "rt", "sync", "time"] }
tokio-stream = "0.1"
urlencoding = { version = "2.1.3", default-features = false }
