[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.14"
axum = { version = "0.8", features = ["json"] }
build_html = "2"
detective = { path = "../detective" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["std"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
